<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_retryLoad">Retry load</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="showNewPosts">Show new posts - %1$d</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_post_dialog">Share texts and photos.</string>
    <string name="create_post_dialog_header">Sign In and create posts!</string>
    <string name="cancel">Cancel</string>
    <string name="like_post_dialog">Show your emotions.</string>
    <string name="like_post_dialog_header">Sign In and send reactions!</string>
    <string name="sure_post_dialog">If logout post will not be created.</string>
    <string name="sure_post_dialog_header">Are you sure?</string>
    <string name="name">Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="student">Student</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="cannot_be_empty">" cannot be empty"</string>
    <string name="tatiana_press">Tatiana Press</string>
    <string name="password_and_password_confirmation_must_match">Password and password confirmation must match</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="menu">Menu</string>
    <string name="empty_users">There are no users</string>
    <string name="play">Play</string>
    <string name="attachment">Attachment</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="error">Error</string>
    <string name="select_application">Select application</string>
    <string name="likers">Likers</string>
    <string name="post">Post</string>
    <string name="avatar">Avatar</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="create">Create</string>
    <string name="CT">CT</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="attach_video_audio">Attach video or audio file</string>
    <string name="select_speackers">Select speackers</string>
    <string name="select_location">Select location</string>
    <string name="select_date_event_type">Select event date and type</string>
    <string name="date">Date</string>
    <string name="select">Select</string>
    <string name="attach_image">Attach image</string>
    <string name="register">Register</string>
    <string name="select_users">Select users</string>
    <string name="new_post">New post</string>
    <string name="set_placemark">Set placemark</string>
    <string name="replace_attachment">Replace attachment?</string>
    <string name="you_have_already_added_an_atatchment">You have already added an attachment. If you continue, the current attachment will be removed. Continue?</string>
    <string name="continue_action">continue_action</string>
    <string name="content_can_not_be_empty">Content can not be empty</string>
    <string name="mentioned">Mentioned</string>
    <string name="looking_for_a_job">Looking for a job</string>
    <string name="you">You</string>
    <string name="choose_users">Choose users</string>
    <string name="participants">Participants</string>
    <string name="event">Event</string>
    <string name="speackers">Speackers</string>
    <string name="new_event">New event</string>
</resources>