<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Главное меню с иконкой -->
    <item
        android:id="@+id/action_overflow"
        style="@style/AppBarMenuButtonStyle"
        android:icon="@drawable/ic_main_menu_24dp"
        android:title="@string/menu"
        app:showAsAction="always">

        <!-- Выпадающий список пунктов -->
        <menu>
            <item
                android:id="@+id/action_login"
                android:title="@string/login" />

            <item
                android:id="@+id/action_register"
                android:title="@string/register" />

            <item
                android:id="@+id/action_profile"
                android:title="@string/profile" />
        </menu>
    </item>

</menu>