<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--TODO: Если делать группы в подменю, то эта часть меню не выводится -->
    <!--    <item-->
    <!--        android:id="@+id/profile_menu"-->
    <!--        android:contentDescription="@string/profile"-->
    <!--        android:icon="@drawable/ic_profile"-->
    <!--        android:title="@string/profile"-->
    <!--        android:visible="false"-->
    <!--        app:showAsAction="always">-->
    <!--        <menu>-->

<!--    <item-->
<!--        android:icon="@drawable/ic_location_pin_24dp"-->
<!--        android:title="@string/profile"-->
<!--        app:showAsAction="always">-->
<!--        <menu>-->
            <group android:id="@+id/unauthorized">
                <item
                    android:id="@+id/sign_in"
                    android:title="@string/sign_in" />
                <item
                    android:id="@+id/sign_up"
                    android:title="@string/sign_up" />
            </group>
            <group android:id="@+id/authorized">
                <item
                    android:id="@+id/open_profile"
                    android:title="@string/profile" />
            </group>
<!--        </menu>-->
<!--    </item>-->

</menu>