<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing" />

            <FrameLayout
                android:id="@+id/mediaContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_photo" />

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/play"
                    app:srcCompat="@drawable/ic_play" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removeAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <include
                    android:id="@+id/card_title_subtitle_audio"
                    layout="@layout/card_title_subtitle_audio" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F3EDF7"
            android:paddingEnd="16dp"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="28dp"
            app:fabCradleVerticalOffset="10dp"
            app:hideOnScroll="true">

            <Button
                android:id="@+id/pick_photo"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/attach_image"
                app:icon="@drawable/ic_camera_24dp"
                app:iconSize="24dp"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/attach_video_audio"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/attach_video_audio"
                app:icon="@drawable/ic_attach_24dp"
                app:iconSize="24dp"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/select_users"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/select_users"
                app:icon="@drawable/ic_users_24dp"
                app:iconSize="24dp"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/select_location"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/select_location"
                app:icon="@drawable/ic_location_pin_24dp"
                app:iconSize="24dp"
                app:iconTint="#000000" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/select_date_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/select_date_event_type"
                app:fabAlignmentMode="center"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_24dp" />

        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>