<?xml version="1.0" encoding="utf-8"?><!--TODO - background color - res?-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_32dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:endIconDrawable="@drawable/ic_date_picker_24dp"
        app:endIconMode="custom"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sing_in_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/event_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/event_type_online">

        <RadioButton
            android:id="@+id/event_type_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/event_type_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/offline" />
    </RadioGroup>

</LinearLayout>
