<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <!--    <include-->
    <!--        android:id="@+id/include_appbarlayout"-->
    <!--        layout="@layout/include_appbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:layout_gravity="top"
            android:contentDescription="@string/description_post_author_avatar"
            android:src="@drawable/author_avatar2"
            tools:srcCompat="@drawable/author_avatar2" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profile_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FEF7FF"
            app:tabTextColor="#1D1B20"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wall" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobs" />

        </com.google.android.material.tabs.TabLayout>
<!--        TODO - нет выделения активного tab синим-->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>