<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="avatar,camera" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/author_avatar2" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar"
            android:layout_height="@dimen/avatar"
            android:contentDescription="@string/description_post_author_avatar"
            android:src="@drawable/author_avatar2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/author_avatar2" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description_post_author_avatar"
            android:src="@drawable/ic_camera_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_camera_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Поле для логина -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sing_in_text_size"
            tools:text="@string/student" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для имени -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sing_in_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для пароля -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/ic_eye_selector_24dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/sing_in_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для подтверждения пароля -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/ic_eye_selector_24dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/sing_in_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка Login -->
    <Button
        android:id="@+id/login_button"
        style="@style/ButtonFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:text="@string/login"
        android:textAppearance="@style/AppTheme.ButtonBigTextStyle.Filled" />

</LinearLayout>