<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_32dp"
    tools:context=".ui.SignInFragment">

    <!-- Поле для логина -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sing_in_text_size"
            tools:text="@string/student" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для пароля -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/ic_eye_selector_24dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/sing_in_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка Login -->
    <Button
        android:id="@+id/login_button"
        style="@style/ButtonFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:text="@string/login"
        android:textAppearance="@style/AppTheme.ButtonBigTextStyle.Filled" />

    <!-- Кнопка-ссылка Register -->
    <Button
        android:id="@+id/register"
        style="@style/ButtonLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:text="@string/don_t_have_an_account_register"
        android:textAppearance="@style/AppTheme.ButtonBigTextStyle.Link" />

</LinearLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".activity.SignInFragment">-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        android:paddingHorizontal="@dimen/spacing_32dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:layout_editor_absoluteX="1dp"-->
    <!--        tools:layout_editor_absoluteY="1dp">-->

    <!--        <com.google.android.material.textfield.TextInputLayout-->
    <!--            android:id="@+id/login"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/login"-->
    <!--            app:errorEnabled="true">-->

    <!--            <com.google.android.material.textfield.TextInputEditText-->
    <!--                android:id="@+id/login_edit"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:textSize="@dimen/sing_in_text_size"-->
    <!--                tools:text="@string/student" />-->

    <!--        </com.google.android.material.textfield.TextInputLayout>-->

    <!--        <com.google.android.material.textfield.TextInputLayout-->
    <!--            android:id="@+id/password"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/password"-->
    <!--            app:endIconDrawable="@drawable/ic_eye_selector_24dp"-->
    <!--            app:endIconMode="password_toggle"-->
    <!--            app:errorEnabled="true">-->

    <!--            <com.google.android.material.textfield.TextInputEditText-->
    <!--                android:id="@+id/password_edit"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:inputType="textPassword"-->
    <!--                android:textSize="@dimen/sing_in_text_size" />-->

    <!--        </com.google.android.material.textfield.TextInputLayout>-->

    <!--        <Button-->
    <!--            android:id="@+id/login_button"-->
    <!--            style="@style/AppTheme.ButtonBig.Filled"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/login"-->
    <!--            android:textAppearance="@style/AppTheme.ButtonBigTextStyle.Filled" />-->

    <!--        &lt;!&ndash;        TODO: Цвет текста берется не из TA, а видимо из стиля&ndash;&gt;-->
    <!--        <Button-->
    <!--            android:id="@+id/register"-->
    <!--            style="@style/AppTheme.IconButton"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/don_t_have_an_account_register"-->
    <!--            android:textAppearance="@style/AppTheme.ButtonBigTextStyle.Link"-->
    <!--            android:textColor="#6750A4" />-->

    <!--    </LinearLayout>-->
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->